@@ -38,6 +38,7 @@ where XXXXXX is the bug number as listed below.
 380397  s390x: __GI_strcspn() replacemenet needed
 381162  possible array overrun in VEX register allocator
 381272  ppc64 doesn't compile test_isa_2_06_partx.c without VSX support
+381289  epoll_pwait can have a NULL sigmask
 
 
 Release 3.13.0 (15 June 2017)
